Trixie migration: GPIO fallback + touchPresence + dimming fix
- Auto-fallback to Python/gpiozero when node-libgpiod unavailable
- touchPresence mechanism for VNC click without physical presence
- Fix: Reset dimmed state immediately when presence detected
- Add python-shell dependency, move node-libgpiod to optional

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "mqtt": "^4.2.8",
+    "python-shell": "^5.0.0"
+  },
+  "optionalDependencies": {
     "node-libgpiod": "^0.5.3",
     "@electron/rebuild": "^3.3.0"
   },
